--- a/galleria/src/main/resources/templates/accessoadmin.html
+++ b/galleria/src/main/resources/templates/accessoadmin.html
@@ -3,67 +3,40 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="utf-8"/>
-<!--     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1"><meta/>
-    <meta name="description" content=""><meta/>
-    <meta name="author" content=""><meta/> -->
-<!-- 	<link rel="stylesheet" href="/lib/bootstrap.min.css">
-    <title>Galleria d'arte</title>
-
-    Bootstrap Core CSS
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    Custom Fonts
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-
-    Plugin CSS
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
-    Theme CSS
-    <link href="css/creative.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/index.css" /> -->
+<link rel="stylesheet" href="css/admin.css" />
 </head>
 <body>
-<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-left">
+
+<div class="topnav">
+  <a href="/">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+   <a href="admin/artisti">Artists</a>
+  <a href="admin/opere">Works of art</a>
+ <!--  <a href="signUp">Sign-up</a> -->
+  <a class="active" href="accedi_admin"><b>Amministratore</b></a>
+  <a sec:authorize="isAuthenticated()" href="/logout">Logout</a>								
                     
-                    <li>
-                        <a class="page-scroll" href="/admin/artisti">List of artists</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/citazioni">Quotes</a>
-                    </li>
-                     
-                    <li>
-                        <a class="page-scroll" href="/admin/opere">Works of art</a>
-                    </li>
-                    <li sec:authorize="isAuthenticated()">
-											<a class="page-scroll" href="/logout">logout</a>
-										
-                    </li>
-                    
-                </ul>
-            </div>
-<div id="wrapper">
- <font size="6">
-		<!-- start: Container -->
-		<div class="container">
+</div>
 
-			<!-- start: Row -->
-			<div class="row">
 
-				<!-- start: Form Login user-->
-				<div align="center" class="span4">
-					<blockquote class="blockquote blockquote">
-	<h1 class="text-left">
-	<em>Admin page</em></h1>
-
-</blockquote>
 
 <br></br>
 <br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<font size="14">
 <div class="main">
 					<div align="center" id="contact-form">
 						<div class="text-error" th:if="${param.error}">Username o password non validi.</div>
@@ -97,18 +70,15 @@
 					</div>
 
 				</div>
-			</div></div>
-			</div>
+</font>			
 <br></br>
 <br></br>
 <br></br>
 
-</font> 
-	</div>
 <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <div class="credits">&copy; Giacomo Bonnani---Sorin Oancea</div>
+                <div class="credits">&copy; Giacomo Bonanni---Sorin Oancea</div>
              
             </div>
         </div>
